--- a/.github/workflows/demo-lambda.yml
+++ b/.github/workflows/demo-lambda.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Build Project
         run: mvn clean install
       - name: Configure AWS Credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ AWS_SECRET_ACCESS_KEY }}
           aws-region: us-east-2
       - name: Create AWS Lambda Function
         run: |
