--- a/.github/workflows/demo-lambda.yml
+++ b/.github/workflows/demo-lambda.yml
@@ -19,7 +19,7 @@ jobs:
         with:
             aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
             aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-            aws-region: ${{ env.AWS_REGION }}
+            aws-region: "us-east-2"
       - name: Create AWS Lambda Function
         run: |
           aws lambda create-function --function-name HandlerString --runtime java17 --handler integration.ninjas.HandlerString::handleRequest --role arn:aws:iam::897416488564:role/lambda_ex --zip-file fileb://target/lambda-basic-1.0-SNAPSHOT.jar
