--- a/.github/workflows/demo-lambda.yml
+++ b/.github/workflows/demo-lambda.yml
@@ -8,7 +8,6 @@ jobs:
     permissions:
       id-token: write
     env:
-      AWS: AWS_ENVIRONMENTS
       REGION: us-east-2
     steps:
       - name: Code Checkout
@@ -23,8 +22,8 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ AWS.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ AWS.AWS_SECRET_ACCESS_KEY }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: ${{ env.REGION }}
       - name: Create AWS Lambda Function
         run: |
