--- a/.github/workflows/demo-lambda-test.yml
+++ b/.github/workflows/demo-lambda-test.yml
@@ -9,6 +9,7 @@ jobs:
       AWS_ACC_KEY: AWS.AWS_ACCESS_KEY_ID
       AWS_ACC_SECRET: AWS.AWS_SECRET_ACCESS_KEY
     steps:
+      - run: echo "$AWS_ACC_KEY!"
       - name: Code Checkout
         uses: actions/checkout@v3
       - name: Setup Java
@@ -21,9 +22,9 @@ jobs:
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v3
         with:
-          aws-access-key-id: ${{ env.AWS_ACC_KEY.secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_ACC_SECRET.secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.REGION }}
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: "us-east-2"
       - name: Create AWS Lambda Function
         run: |
           aws lambda create-function --function-name HandlerString --runtime java17 --handler integration.ninjas.HandlerString::handleRequest --role arn:aws:iam::897416488564:role/lambda_ex --zip-file fileb://target/lambda-basic-1.0-SNAPSHOT.jar
