--- a/.github/workflows/demo-lambda-test.yml
+++ b/.github/workflows/demo-lambda-test.yml
@@ -4,12 +4,10 @@ on: [push]
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    env:
-      REGION: us-east-2
-      AWS_ACC_KEY: AWS.AWS_ACCESS_KEY_ID
-      AWS_ACC_SECRET: AWS.AWS_SECRET_ACCESS_KEY
+    environment:
+      name: AWS
     steps:
-      - run: echo "$AWS_ACC_KEY!"
+      - run: echo "$AWS_ACCESS_KEY_ID!"
       - name: Code Checkout
         uses: actions/checkout@v3
       - name: Setup Java
@@ -30,4 +28,4 @@ jobs:
           aws lambda create-function --function-name HandlerString --runtime java17 --handler integration.ninjas.HandlerString::handleRequest --role arn:aws:iam::897416488564:role/lambda_ex --zip-file fileb://target/lambda-basic-1.0-SNAPSHOT.jar
         continue-on-error: true
       - name: Update Lambda Function
-        run: aws lambda update-function-code --function-name HandlerString --zip-file fileb://target/lambda-basic-1.0-SNAPSHOT.jar
+        run: aws lambda wait function-updated --function-name HandlerString --zip-file fileb://target/lambda-basic-1.0-SNAPSHOT.jar
